--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 					</ul>
 				</div>
 				<div class="image filtered tinted" data-position="top right">
-					<img src="images/projectt/matese-fields-pvHma684eEI-unsplash.jpg" alt="Journey" />
+					<img src="images/projectt/bg.jpg" alt="Journey" />
 				</div>
 			</section>
 
